Still refactoring the project to work as an api

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ pytest = '*'
 sqlalchemy = '*'
 fastapi = '*'
 uvicorn = '*'
+itsdangerous = '*'
+werkzeug = '*'
+pydantic = '*'
 
 [requires]
 python_version = "3.8"
